# backpackiest

./: .gitignore  About.html  Gallery.html  Issue.html  Journal.html  README.md  contact.html  index.html  index.md  mystyle.css  pyproject.toml  try.md
.github/workflows/: ci.yml
src/backpackiest/: main.py
tests/: test_main.py
